# libwebrtc

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.ps1  build_windows.ps1  conandata.yml  conanfile.py  deploy_windows.ps1  sync.bat  sync.sh  version_replacement.ps1  version_tagging.sh
CMakeModules/: Environment.cmake  Gn.cmake  Install.cmake  PatchCMakeTargets.cmake  PatchWebRTC.cmake  TargetOsAndCpu.cmake  Version.cmake
CMakeModules/Templates/: LibWebRTCConfig.cmake.in
cmake/: AddWebRTCTarget.cmake  FindLibraries.cmake  PatchFile.cmake  TargetOsAndCpu.cmake  Version.cmake
depot_tools/: CMakeLists.txt
libwebrtc/: CMakeLists.txt  LibWebRTCConfig.cmake.in  LibWebRTCConfigVersion.cmake.in  LibWebRTCTargets-debug.cmake  LibWebRTCTargets-release.cmake  LibWebRTCTargets.cmake.in  UseLibWebRTC.cmake
patches/: 1.patch  2.patch
sample/: CMakeLists.txt
webrtc/: CMakeLists.txt.in
